Try to fix the editor in the visible viewport using Browser.Dom APIs

--- a/app/assets/stylesheets/admin/article.scss
+++ b/app/assets/stylesheets/admin/article.scss
@@ -62,7 +62,6 @@
 
     }
     trix-editor{
-        min-height: 500px;
         overflow-y: scroll;
     }
 }
